--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-15 11:42:15 -0600 
+%% Created for Evan Bollig at 2013-11-15 16:52:56 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{NumbaPro,
+	Author = {Mark Harris},
+	Date-Added = {2013-11-15 22:51:57 +0000},
+	Date-Modified = {2013-11-15 22:52:33 +0000},
+	Howpublished = {\nolinkurl{http://devblogs.nvidia.com/parallelforall/numbapro-high-performance-python-cuda-acceleration/}},
+	Month = {September},
+	Title = {NumbaPro: High-Performance Python with CUDA Acceleration},
+	Year = {2013}}
+
+@misc{KhronosGroup,
+	Date-Added = {2013-11-15 17:47:27 +0000},
+	Date-Modified = {2013-11-15 17:47:49 +0000},
+	Title = {About the Krhonos Group}}
 
 @misc{IntelTBB,
 	Author = {Intel Corporation},
