--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -70,9 +70,59 @@ Sharing information across multiprocessors is possible in \textit{global device 
 \end{figure}
 
 
-%TODO: describe context
-%TODO: describe context with multiple devices, we assume one device per context
-%TODO: describe multiple queues, we generally assume one queue per device although chapter 7 assumes two
+%TODO: cost increases at each level of memory 
+%TODO: load memory in lines of 128 bits. 
+%TODO: rule of thumb to keep data close to compute threads
+
+%TODO: sparse support was missing but it is key to a lot of problems
+%TODO: added in Bell
+%TODO: many investigations followed within SuKeutzer, Kreutzter, Vuduc etc.
+%TODO: problem with SpMV is operational intensity 
+%TODO: OI dictates GFLOP/sec (define GFLOP/sec)
+%TODO: roofline model predicts that the stock operation can only achieve 18.5 GFLOP/sec
+%TODO: the best way to optimize is through memory load reduction which leads to alternative formats
+%TODO: alternative formats include ELL, CSR, COO
+
+%TODO: initially custom kernels attempted to implement efficiently
+%TODO: custom kernels by thread and warp tested 
+%TODO: data was structured as a CSR
+%TODO: ended up with this convoluted set of operations that perform RK4 in a few kernels
+%TODO: performance in Appendix C shows maximum of 3 GFLOP/sec, even when operating on two independent SpMVs
+
+%TODO: in an effort to improve performance we adopted ViennaCL 
+%TODO: ViennaCL support for sparse algebra was competitive.  
+%TODO: design now includes backends for CUDA, OpenMP, although some operations require OpenCL
+%TODO: included in PETSc
+%TODO: easy to implement kernels by stepping out to matrix primitives (SpMV, AXPY, etc). Tuned kernels for each
+%TODO: contributions to ViennaCL for rectangular matrices and distributed computation
+
+%TODO: performance achieved in ViennaCL formats shown here
+%TODO: test performance on cascade where two types of GPU and intel phi are available
+%TODO: compared to CPU CSR which was fastest BOOST::uBLAS 
+%TODO: surprising that COO performs better than CSR for larger n (explained as: ???; memory may already be loaded?)
+%TODO: regardless of COO vs CSR, ELL is clear winner with 43\% of estimated peak
+%TODO: expected M2070 to be slower than K20
+%TODO: suspect that K20 is same performance because the hardware has one less multiprocessor 
+%TODO: and OpenCL executes using NVidia driver from Fermi class, NVidia no longer actively maintaining
+%TODO: private comm with other ViennaCL developers suspects NVidia throttles OpenCL so K20 data is less true
+%TODO: for now accept 8 GFLOP/sec in ELL and verify the performance growth by stencil size
+%TODO: growth by stencil size compares all stencil sizes on M2070 and K20. 
+%TODO: comparison includes speedup against CPU CSR shows our expectations of 20x speedup not yet realized
+%TODO: speedup actually decreasing because of the increasing performance of CPUs as they become many-core
+
+%TODO: preliminary work on Intel Phi questioned whether it is a GPU killer
+%TODO: phi features ring, cache, SIMD cores
+%TODO: opencl portability allowed us to repeat matrix format tests with ViennaCL
+%TODO: GFLOP/sec shown here. dismal results
+%TODO: low low data, CSR better than ELL 
+%TODO: two reasons: opencl driver and kernels do not express parallelism necessary 
+
+%TODO: future GPU will investigate ELL alternatives BELL/SBELL/etc. 
+%TODO: future work will find more appropriate OpenCL or leverage ViennaCL OpenMP backend on Phi
+%TODO: give up on single SpMV and work toward SpMM and multiple SpMMs. 
+%TODO: already working with MIC vector instructions for up to xxx GFLOP/sec for multiple SpMMs
+
+
 
 
 \section{Sparse Matrix Support on the GPU}
@@ -91,22 +141,15 @@ Developers either implemented their own kernels (as we did in \cite{BolligFlyerE
 Performance of SpMV on GPU will not be optimal. Often one finds in literature examples of applications that have been accelerated by huge factors. In fact, speedup factors greater than 10x should never be possible for SpMV. In order to manage expectations of how much faster tasks will operate on the GPU we can turn to a \emph{roofline model} \cite{Williams2009}. The roofline model 
 
 
-Most recently, the PETSc library gained GPU support with the addition of both CUSP \cite{Cusp2012} and ViennCL \cite{Rupp2010} back-ends \cite{Minden2010}. PETSc---which dates back to the early 1990s---is widely-used for solving PDEs with proven scalability on the world's top supercomputers. PETSc provides distributed sparse and dense matrix algebra, Krylov solvers, and preconditioners. The support for GPU back-ends allows a vast number of applications that have been developed over more than two decades to run on multiple GPUs with minimal modification. Since PETSc already has overlapping MPI communication and computation for distributed CPU environments, the GPU offloaded applications also benefit from this feature. Yokota et al. \cite{YokotaGPU2010} demonstrate that PETSc multi-GPU applications can scale excellently (in the strong sense) when configured for tree-based communication, which arises naturally from Fast Multipole Methods. The authors scale their boundary element method across 256 GPUs (2 per compute node) with 80\% parallel efficiency, and 512 GPUs (4 per compute node) with 50\% efficiency. In contrast to this our distributed implementation currently achieves no more than 57\% parallel efficiency when spanning 8 GPUs. While we do not take advantage of tree-based communications, this is planned as part of the future work to improve scalability. 
+%Most recently, the PETSc library gained GPU support with the addition of both CUSP \cite{Cusp2012} and ViennCL \cite{Rupp2010} back-ends \cite{Minden2010}. PETSc---which dates back to the early 1990s---is widely-used for solving PDEs with proven scalability on the world's top supercomputers. PETSc provides distributed sparse and dense matrix algebra, Krylov solvers, and preconditioners. The support for GPU back-ends allows a vast number of applications that have been developed over more than two decades to run on multiple GPUs with minimal modification. Since PETSc already has overlapping MPI communication and computation for distributed CPU environments, the GPU offloaded applications also benefit from this feature. Yokota et al. \cite{YokotaGPU2010} demonstrate that PETSc multi-GPU applications can scale excellently (in the strong sense) when configured for tree-based communication, which arises naturally from Fast Multipole Methods. The authors scale their boundary element method across 256 GPUs (2 per compute node) with 80\% parallel efficiency, and 512 GPUs (4 per compute node) with 50\% efficiency. In contrast to this our distributed implementation currently achieves no more than 57\% parallel efficiency when spanning 8 GPUs. While we do not take advantage of tree-based communications, this is planned as part of the future work to improve scalability. 
 
 
 
+%GPUs currently support single and double precision. RBF-FD certainly requires double precision at the moment. Solving for the weights in single precision might work, but the lower precision would not be able to handle the ill-conditioned system. Projecting double precision weights into single precision results in weights that sum to $\approx 10^{-4}$, a poor approximation to zero. 
 
 
-%TODO verify date of open source
-In 2012 NVidia open sourced CUDA to lower level virtual machines. This opened the possibility of directly compiling other languages like Python (Anaconda) to build kernels directly within the Python language for CUDA. 
-
-GPUs currently support single and double precision. RBF-FD certainly requires double precision at the moment. Solving for the weights in single precision might work, but the lower precision would not be able to handle the ill-conditioned system. Projecting double precision weights into single precision results in weights that sum to $\approx 10^{-4}$, a poor approximation to zero. 
-%
 %the addition of a new software layer that finally made GPGPU accessible to the general public. The CUDA API includes routines for memory control, interoperability with graphics contexts (i.e., 
 %OpenGL programs), and provides GPU implementation subsets of BLAS and FFTW libraries \cite{CudaGuide2013}. After the undeniable success of CUDA for C, new projects emerged to encourage GPU programming in languages like FORTRAN (see e.g., HMPP \cite{HMPP2009} and Portland Group Inc.'s CUDA-FORTRAN \cite{CudaFortran2009}). 
-%
-%This transition was 
-%followed closely by evolving programming languages. Today, GPUs can be leveraged from C/C++, FORTRAN, Java, Python, MATLAB, and more. The list seems endless, with new developments appearing every day. 
 
 
 
@@ -139,7 +182,7 @@ GPUs currently support single and double precision. RBF-FD certainly requires do
 
 Success stories abound on the GPU citing massive gains in performance. However, many like \cite{Phillips2009} appear to be impossible
 
-RBF-FD is embarrassingly parallel with stencils applied independently. Unfortunately, maximum concurrency does not always imply perfect performance. %TODO: (SHOW RBF-FD benchmarks for Vortex and Cosine as an example of 1x and 2x SpMV on GPU; state that the generation GPU they were run on has a peak of xxx which means performance was xxx\% (dismal).).
+RBF-FD is embarrassingly parallel with stencils applied independently. Unfortunately, maximum concurrency does not always imply perfect performance. 
 
 On the Fermi GPUs (Figure~\ref{fig:roofline_m2070}) at 144 GB/s you need an OI of 4 to reach the peak of 515 GFLOP/sec per card. On the K20 (Figure~\ref{fig:roofline_k20}) you need 6 to hit the peak 1.17 TFLOP/s (208 GB/s). But with an OI of 1/16 you could get 9 GFLOP/sec on the Fermi and 13 on the K20 (compared to the 2 GFLOP/sec on Itasca). 
 
@@ -198,16 +241,6 @@ On the Fermi GPUs (Figure~\ref{fig:roofline_m2070}) at 144 GB/s you need an OI o
 %"    }\n"
 %"}\n"
 %\end{verbatim}
-
-
-%TODO: targeting the GPU for SpMV (how to write a kernel as forloop without the for)
-
- 
-%TODO: list all known work on SpMV for GPU
-%TODO: emphasize that the GPU SpMV has been studied since before 2006.
-%TODO: SpMV condenses sparse matrix to dense form. 
-%TODO: each of the dense forms are unique (describe each)
-%TODO: newer forms are available
 
 
 
