--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-15 16:52:56 -0600 
+%% Created for Evan Bollig at 2013-11-16 14:15:32 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{M2070FactSheet,
+	Date-Added = {2013-11-16 20:14:36 +0000},
+	Date-Modified = {2013-11-16 20:15:32 +0000},
+	Howpublished = {\nolinkurl{http://www.nvidia.com/docs/IO/43395/NV_DS_Tesla_M2050_M2070_Apr10_LowRes.pdf}},
+	Month = {April},
+	Title = {TESLA M2050/M2070 GPU Computing Module -- Supercomputing at 1/10th the Cost},
+	Year = {2010}}
 
 @misc{NumbaPro,
 	Author = {Mark Harris},
