--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -43,7 +43,8 @@ The success of GPGPU is largely due to the incredible gap between compute capabi
 
 Due to the success of CUDA (architecture, language, compiler, etc.), and partly because it was vendor specific and closed source, the OpenCL standard for GPU computing was proposed in 2009 \cite{OpenCL2009}. When CUDA was released in 2006, NVidia was not the only contender in the ring of GPU computing: AMD/ATI also had programmable GPUs that could be targeted by a high level language called Brook+ \cite{BrookGPU2004}. Distantly related, Intel was already working toward multi-/many-core architectures that could be targeted by Intel Threaded Building Blocks \cite{IntelTBB}. The OpenCL standard proposed a parallel computing language with the ability to run on any multi-/many-core architecture. The standard is maintained by the Khronos Group, an advisory committee with representatives from the biggest names in hardware and computing (e.g., Apple, AMD, Intel, NVidia, Samsung, Sony, etc.). 
 
-At the onset of this work it was decided that utilizing OpenCL was preferred over CUDA. The GPU computing market was relatively young, and no single company had a dominant share of the HPC market. GPU hardware from both NVidia and ATI was evolving rapidly and OpenCL promised functional portability (i.e., it would run everywhere), so our bets were hedged on the most likely technology to be supported across vendors going into the future. Note that functional portability does not guarantee performance portability (i.e., optimal kernels for NVidia are not optimal for ATI). Some features like 2-D and 3-D textures, which are part of the CUDA standard, are vendor provided extensions in OpenCL and not supported everywhere. In hindsight, the market today clearly favors NVidia for GPU computing with the majority of GPU clusters world-wide contain NVidia accelerators (typically Tesla units). The CUDA C/C++ compiler was open-sourced in the Spring of 2012 as an LLVM compiler, which allows other languages to directly interface with the GPU without the need for wrappers (see e.g., \cite{NumbaPro}). Although OpenCL does not leverage all NVidia specific hardware features, knowledge of the hardware is essential to tune kernels for the best performance. 
+At the onset of this work it was decided that utilizing OpenCL was preferred over CUDA. The GPU computing market was relatively young, and no single company had a dominant share of the HPC market. GPU hardware from both NVidia and ATI was evolving rapidly and OpenCL promised functional portability (i.e., it would run everywhere), so our bets were hedged on the most likely technology to be supported across vendors going into the future. Note that functional portability does not guarantee performance portability (i.e., optimal kernels for NVidia are not optimal for ATI). Some features like 2-D and 3-D textures, which are part of the CUDA standard, are vendor provided extensions in OpenCL and not supported everywhere. In hindsight, the market today clearly favors NVidia for GPU computing with the majority of GPU clusters world-wide contain NVidia accelerators (typically Tesla units). The CUDA C/C++ compiler was open-sourced in the Spring of 2012 as an LLVM compiler, which allows other languages to directly interface with the GPU without the need for wrappers (see e.g., \cite{NumbaPro}). Although OpenCL does not leverage all NVidia specific hardware features, knowledge of the hardware generally helps %leads to optimal structure of 
+structure kernels for the best performance. 
 
 
 \subsection{OpenCL Memory and Execution Models}
@@ -58,8 +59,10 @@ In OpenCL (i.e., software), bundles of work-items are called \textit{work-groups
 \label{fig:opencl_execute_model}
 \end{figure}
 
-The memory model for OpenCL, depicted in Figure~\ref{fig:opencl_memory_model}, follows a similar hierarchy to the execution model. On a multiprocessor, each computing core executes a work-item (thread) with a limited set of registers. The number of registers varies with the generation of hardware, but always come in small quantities (e.g., 32K per multiprocessor on the Fermi \cite{CudaGuide2011}). Accessing registers is essentially free, but they must be shared across all work-items executing on the multiprocessor. Therefore, keeping data in registers requires one to balance the kernel complexity and the number of work-items per work-group. Work-items of a single work-group share data with one another through a small \textit{local memory} that also doubles as an on-processor L1 cache. Fermi- and Kepler-class GPUs have 64 KB of configurable memory shared between the local and cache memory on each multiprocessor. The option to configure the size of local versus cache memory is CUDA specific and not offered as an extension in OpenCL, so the default split is assumed with 16 KB in cache and 48 KB of local memory \cite{CudaGuide2013}.
-Sharing information across multiprocessors is possible in \textit{global device memory}---the largest and slowest memory space on the GPU. To improve seek times into global memory, Fermi and Kepler level architectures include a shared L2 cache for all multiprocessors in addition to the L1 on each multiprocessor. 
+Optimizing OpenCL kernels for the GPU follows the same set of rules as in CUDA. Problems are broken into hundreds or thousands of work-items, with each work-item performing as many operations as possible per element of memory in order to justify the high cost of memory access. For compute intensive problems, a large number of strategies exist to restructure computation and ensure SIMD processing of work-items (see e.g., \cite{CudaGuide2013}). Unfortunately, RBF-FD is a memory-bound problem. In such cases optimizations must focus solely on efficient use of memory and cache. 
+
+The memory model for OpenCL, depicted in Figure~\ref{fig:opencl_memory_model}, follows a similar hierarchy to the execution model. On a multiprocessor, each multiprocessor core executes a work-item (thread) with a limited set of registers. The number of registers varies with the generation of hardware, but always come in small quantities (e.g., 32K per multiprocessor on the Fermi \cite{CudaGuide2013}). Accessing registers is essentially free, but they are shared across all work-items executing on the multiprocessor. Therefore, keeping data in registers requires one to balance the kernel complexity and the number of work-items per work-group. 
+
 
 \begin{figure}
 \centering
@@ -68,11 +71,26 @@ Sharing information across multiprocessors is possible in \textit{global device 
 \label{fig:opencl_memory_model}
 \end{figure}
 
+Work-items of a single work-group share data with one another through a small \textit{local memory} that also doubles as an on-processor L1 cache. Fermi- and Kepler-class GPUs have 64 KB of configurable memory shared between the local and cache memory on each multiprocessor. The option to configure the size of local versus cache memory is CUDA specific and not offered as an extension in OpenCL, so the default split is assumed with 16 KB in cache and 48 KB of local memory \cite{CudaGuide2013}.
+Sharing information across multiprocessors is possible in \textit{global device memory}---the largest and slowest memory space on the GPU. To improve seek times into global memory, Fermi and Kepler level architectures include a shared L2 cache for all multiprocessors in addition to the L1 on each multiprocessor. 
+
+When reading and writing global memory on the GPU, the hardware operates on L1 cache lines that are 128 bytes wide and shared by a warp of work-items. Load or store operations on global memory result in an entire cache line being read or written in a single transaction. If warps operate on data spanning multiple cache lines, then the hardware attempts to coalesce operations into as few transactions as possible \cite{CudaGuide2013}. For example, if a warp loads 32 double precision floats (8 bytes each) that are consecutive in memory, then two transactions are needed. If the floats are not consecutive in global memory, but randomly dispersed across four 128 byte-aligned segments of global memory, then four transactions are required. Properly packing operations to fully utilize cache lines is key to performance in kernels. 
+
+
+%Once a line has entered the L1 cache, the warp of work-items can access the cache line concurrently, although some rules exist on how quickly
+
+
+ 
+%TODO: how does packing impact RBF-FD? 
+%TODO: transition from this section to 5.2 (sparse matrix support)
+
+
 \section{Sparse Matrix Support on the GPU}
 
 %DONE: sparse support was missing but it is key to a lot of problems
 %DONE: added in Bell
 %TODO: problem with SpMV is that it is memory bound. 
+%TODO: dense algebra sells hardware, sparse algebra was harder.
 %TODO: many investigations followed within SuKeutzer, Kreutzter, Vuduc etc.
 %TODO: problem with SpMV is operational intensity 
 %TODO: OI dictates GFLOP/sec (define GFLOP/sec)
